:lipstick: [Style] AppPlan 여행 계획 페이지 레이아웃 구현 및 nav, kakao 맵 구현

--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "parserOptions": {
       "parser": "@babel/eslint-parser"
     },
-    "rules": {}
+    "rules": {},
+    "globals": {"kakao":true}
   },
   "browserslist": [
     "> 1%",
