--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue2-datepicker": "^3.11.1",
     "vueperslides": "^2.16.0",
     "vuex": "^3.6.2"
   },
@@ -28,6 +29,8 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^8.0.0",
+    "sass-loader": "^13.2.2",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
@@ -43,7 +46,9 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {},
-    "globals": {"kakao":true}
+    "globals": {
+      "kakao": true
+    }
   },
   "browserslist": [
     "> 1%",
