--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^2.0.10",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vueperslides": "^2.16.0",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -43,7 +45,9 @@
       "parser": "@babel/eslint-parser"
     },
     "rules": {},
-    "globals": {"kakao":true}
+    "globals": {
+      "kakao": true
+    }
   },
   "browserslist": [
     "> 1%",
